--- a/.learn/resets/12.1-body-content/index.html
+++ b/.learn/resets/12.1-body-content/index.html
@@ -35,9 +35,7 @@
 					</form>
 				</div>
 			</div>
-			<div class="postcard-footer">
-				<button>Send my Postcard</button>
-			</div>
+			<div class="postcard-footer"></div>
 		</div>
 	</body>
 </html>
